fixed spacing contop nad headers, fix get started

--- a/css/shared.css
+++ b/css/shared.css
@@ -115,16 +115,16 @@ p{
     top: 17%
 }
 
-
-/* ul {
+/* 
+ul {
   list-style-type: square;
   margin-left: -5%;
   line-height: 1.3;
-}
+} */
 li {
   padding: 2% 0%;
 }
- */
+
 .header-text-padding{
   padding: 3% 0% 1% 0%;
 }
@@ -210,9 +210,13 @@ li {
   padding: 0%;
 }
 
+.get-started-3{
+  padding: 0%;
+}
+
 @media(min-width:768px){
   .contop{
-    padding-top: 5rem; 
+    padding-top: 6rem; 
   }
   .load-link{
     padding:0% 2%
@@ -256,6 +260,9 @@ li {
   padding: 0% 19%;
   margin: -9% 0%;
 
+}
+.get-started-3 {
+  margin: 0% 10%;
 }
 }
 
@@ -301,6 +308,9 @@ li {
   margin: 0% 10%;
 
 }
+.get-started-3 {
+  margin: 0% 20%;
+}}
 .checklist-padding{
   padding: 0% 28%;
   margin: -6% 0%;
